second commit(edited image & changed name of it)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="logo">
-        <img src="image/Munder Diffin.png">
+        <img src="image/munder-difflin-logo.png">
     </div>
     
         <script src="main.js"></script>
