7th commit(added the nav bar)

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-<header>
+<header class="header">
     <div class="logo">
         <img src="image/munder-difflin-logo.png" class="logo">
     </div>
 
-    <nav id = "header">
+    <nav id = "navbar">
         <a>Pre-Order</a>
         <a>About Us</a>
         <a>Coming Soon</a>
@@ -24,24 +24,26 @@
 <div class="section-1">
     <img src="image/stack_of_paper.jpg" class="image-1">
 
-    <p class="text-1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores commodi quisquam veritatis, odio vel nam labore, possimus soluta corrupti esse similique, earum iure aspernatur et necessitatibus amet mollitia? Tempore, fugit?
-    </p>
+    <h1 class="text-1">
+        Paper made from<br> 
+        recycled stone
+    </h1>
 
 </div>
 
 <div class="section-2">
     
-    <p class="text-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nemo ducimus nobis quaerat fugit laborum ipsum accusantium! Amet beatae sed iste, suscipit quisquam tempora nemo quaerat at vitae repellendus neque.
-    </p>
+    <h1 class="text-2">
+        Coming soon
+    </h1>
     
-    <img src="image/fountain_pen_onpaper.jpg" class="image-2">
+    <img src="image/mike-tinnion-327565-unsplash.jpg" class="image-2">
 
 </div>
 
 <div class="section-3">
     <img src="image/flipping_paper.jpg" class="image-3">
+
 
     <p class="text-3">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam non tenetur eaque deleniti qui repudiandae, illum quod omnis enim. Sed quod id in. Assumenda, corrupti in aspernatur similique fugiat temporibus.
