--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 <header class="header">
+    <div class="logo">
+        <img src="image/munder-difflin-logo.png" class="logo">
+    </div>
+
     <nav id = "navbar">
-        <img src="image/munder-difflin-logo.png" class="logo" class="logo">
         <a>Home</a>
         <a>Pre-Order</a>
         <a>Coming Soon</a>
@@ -22,11 +25,14 @@
 
     <div class="section-1">
         <img src="image/stack_of_paper.jpg" class="image-1">
-
+        <div class="creative-div-1">
         <h1 class="text-1">
             Paper made from<br> 
             recycled stone
         </h1>
+
+        <button class="round-normal">Pre-Order</button>
+        </div>
 
     </div>
 
