12th commit(footer added)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 
 </div>
 
+<footer class="footer">
+    <p>@2018 Munder Difflin Stone Paper</p>
+    <a>Facebook</a>
+    <a>Instagram</a>
+
+</footer>
+
     
     
         <script src="main.js"></script>
