13th commit(added footer sm icons)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    
+    <!-- this is used for social media icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -66,8 +69,10 @@
 
 <footer class="footer">
     <p>@2018 Munder Difflin Stone Paper</p>
-    <a>Facebook</a>
-    <a>Instagram</a>
+    <i class="fa fa-facebook-square" style="font-size:36px"></i>
+    <i class="fa fa-instagram" style="font-size:36px"></i>
+    <i class="fa fa-tumblr-square" style="font-size:36px"></i>
+    <i class="fa fa-pinterest-square" style="font-size:36px"></i>
 
 </footer>
 
