removed inline css, and renamed readme file into all caps

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
 <footer class="footer">
     <p>@2018 Munder Difflin Stone Paper</p>
-    <i class="fa fa-facebook-square" style="font-size:36px"></i>
-    <i class="fa fa-instagram" style="font-size:36px"></i>
-    <i class="fa fa-tumblr-square" style="font-size:36px"></i>
-    <i class="fa fa-pinterest-square" style="font-size:36px"></i>
+    <i class="fa fa-facebook-square"></i>
+    <i class="fa fa-instagram"></i>
+    <i class="fa fa-tumblr-square"></i>
+    <i class="fa fa-pinterest-square"></i>
 
 </footer>
 
