added transition animation. Commented out some useful js code.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="image/munder-difflin-logo.png" class="logo">
     </div>
 
-    <nav id = "navbar">
+    <nav id = "navbar" class="navbar">
         <a href="#home">Home</a>
         <a href="#preorder">Pre-Order</a>
         <a href="#comingsoon">Coming Soon</a>
